src/objects/Treatment__c.object
<CustomObject>
    <description>Record of Treatment - Section D, E, F, G and H of HRB Form</description>
    <fields>
        <fullName>ALCOHOL__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;, 

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;&quot;, 

Case(X22_Ever_previously_treated_alc_drug__c, 
&quot;1. Never treated&quot;,&quot;1&quot;, 
&quot;2. Previously treated&quot;,&quot;2&quot;, 
&quot;8. Not applicable&quot;,&quot;8&quot;,
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;))</formula>
        <label>ALCOHOL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANCHORID__c</fullName>
        <label>ANCHORID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASSESS__c</fullName>
        <formula>DATEVALUE(IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c  = &quot;994&quot;, 

&quot;&quot;,  

TEXT(X16_Date_of_Assessment__c)))</formula>
        <label>ASSESS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accepted__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, 

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;4. Psychiatric assessment only&quot;), 

&quot;&quot;,

CASE( X19_Accepted_place_at_this_centre__c , 
&quot;1. Yes&quot;,&quot;1&quot;, 
&quot;2. No&quot;,&quot;2&quot;, 
&quot;&quot;) )</formula>
        <label>Accepted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddedBy__c</fullName>
        <formula>Centre_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddedBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Added__c</fullName>
        <formula>CreatedDate</formula>
        <label>Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,  

 FLOOR((X13_Date_of_Referral__c - Contact__r.Birthdate) /365.25),

 FLOOR(( X16_Date_of_Assessment__c - Contact__r.Birthdate )/365.25) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AlcAlcopops__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;,

IF( INCLUDES( X28e_Preferred_types_of_alcohol_consumed__c , &quot;7. Alcopops&quot;) , &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcAlcopops</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcBeer__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;FALSE&quot;,

IF(INCLUDES( X28e_Preferred_types_of_alcohol_consumed__c,&quot;2. Beer&quot;),&quot;TRUE&quot;, &quot;FALSE&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcBeer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcCider__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;,

IF( INCLUDES( X28e_Preferred_types_of_alcohol_consumed__c , &quot;6. Cider&quot;) , &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcCider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcFortified__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;,

IF( INCLUDES( X28e_Preferred_types_of_alcohol_consumed__c , &quot;5. Fortified wine&quot;) , &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcFortified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcOther__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;,

IF( INCLUDES( X28e_Preferred_types_of_alcohol_consumed__c , &quot;8. Other (e.g. methylated spirits)&quot;) , &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcOther</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcSpirits__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;,

IF( INCLUDES( X28e_Preferred_types_of_alcohol_consumed__c , &quot;3. Spirits&quot;) , &quot;TRUE&quot;, &quot;FALSE&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcSpirits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcUnspecified__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;,

IF( INCLUDES( X28e_Preferred_types_of_alcohol_consumed__c , &quot;&quot;) , &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcUnspecified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcWine__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;,

IF( INCLUDES( X28e_Preferred_types_of_alcohol_consumed__c , &quot;4. Wine&quot;) , &quot;TRUE&quot;, &quot;FALSE&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcWine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcoholExtSpecify__c</fullName>
        <label>AlcoholExtSpecify</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AlcoholExtent__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

CASE(X28h_Extent_of_drinking_problem__c,
&quot;2. Hazardous drinker&quot;, &quot;2&quot;,
&quot;3. Harmful drinker&quot;,&quot;3&quot;,
&quot;4. Dependent drinker&quot;,&quot;4&quot;,
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AlcoholExtent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssCriteriaDate_del__c</fullName>
        <formula>DATEVALUE(
IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;),

&quot;&quot;,

TEXT( X17c_Date_assessment_criteria_fulfilled__c )))</formula>
        <label>AssCriteriaDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssCriteria__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;),

&quot;&quot;, 

CASE(   X17b_Assessment_criterion_fulfilled__c   ,
&quot;1.Yes&quot;, &quot;1&quot;,
&quot;2. No&quot;, &quot;2&quot;,
&quot;3. Pending&quot;, &quot;3&quot;,
&quot;8. Not applicable&quot;, &quot;8&quot;,
&quot;&quot;))</formula>
        <label>AssCriteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBV1__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;FALSE&quot;,

IF(TEXT( X41_Viral_Screening_uptake__c ) = &quot;1. HIV test&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBV1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBV2__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;, 

IF(TEXT( X41_Viral_Screening_uptake__c ) = &quot;2. Hepatitis B test&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBV2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBV3__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),

&quot;FALSE&quot;, 

IF(TEXT( X41_Viral_Screening_uptake__c ) = &quot;3. Hepatitis C test&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBV3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRINJ__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

Case(X29a_Injected_in_past_month__c, 
&quot;1. Yes&quot;,&quot;1&quot;, 
&quot;2. No&quot;,&quot;2&quot;, 
&quot;9. Not Known&quot;, &quot;9&quot;,
&quot;&quot;))</formula>
        <label>CURRINJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseMgrSpecify__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

IF (X33c26_Case_Treatment_Centre__r.CentreNo__c  &lt;&gt; &quot;&quot;, X33c26_Case_Treatment_Centre__r.CentreNo__c , &quot;&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseMgrSpecify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CentreSpecify__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;),

&quot;&quot;, 

X18a3_Specify_Transferred__r.CentreNo__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CentreSpecify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centre__c</fullName>
        <inlineHelpText>The first four digits are used as the centre number in the HRB report</inlineHelpText>
        <label>Treatment Centre</label>
        <picklist>
            <picklistValues>
                <fullName>3002 St Anne&apos;s Hospital Shanakiel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3003 Psychiatric Unit, Bantry General Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3004 SHB Addiction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3005 Tabor Lodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13687 Finglas addiction support team (FAST)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Centre_number__c</fullName>
        <formula>if (isblank(text(Centre__c )),  Contact__r.CentreNO__c , LEFT(text( Centre__c ), 5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Centre number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleanDate__c</fullName>
        <label>CleanDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Treatments</relationshipLabel>
        <relationshipName>Treatments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Contact__r.Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Valid__c</fullName>
        <formula>Contact__r.Record_Valid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Valid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Treatments</relationshipLabel>
        <relationshipName>Treatments_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOC__c</fullName>
        <formula>DATEVALUE(

IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

TEXT( X21a_Date_This_treatment_started__c )))</formula>
        <label>DOC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRUG2AGE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, 

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;, 

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK( X26a_Substance_2__r.DrugCode__c ) ) , 

&quot;0&quot;,

TEXT(X26d_Age_of_1st_use__c) ) )</formula>
        <label>DRUG2AGE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG2CODEID__c</fullName>
        <label>DRUG2CODEID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG2CODEX__c</fullName>
        <label>DRUG2CODEX</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG2CODE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK(  X26a_Substance_2__r.DrugCode__c  ) ) ,

&quot;000&quot;, 

 X26a_Substance_2__r.DrugCode__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG2CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG2FREQ__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK(  X26a_Substance_2__r.DrugCode__c ) ) ,

&quot;0&quot;, 

Case(X26c_Frequency_of_use_in_last_mth__c, 
&quot;1. Once a week or less&quot;,&quot;1&quot;, 
&quot;2. 2-6 days per week&quot;,&quot;2&quot;, 
&quot;3. Daily&quot;,&quot;3&quot;, 
&quot;4. No use in past month&quot;,&quot;4&quot;, 
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG2FREQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG2RTE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK( X26a_Substance_2__r.DrugCode__c ) ) ,

&quot;0&quot;, 

Case(X26b_Route_of_Admin_Sub2__c, 
&quot;1. Inject&quot;,&quot;1&quot;, 
&quot;2. Smoke&quot;,&quot;2&quot;, 
&quot;3. Eat/drink&quot;,&quot;3&quot;, 
&quot;4. Sniff/snort/ inhale&quot;,&quot;4&quot;, 
&quot;5. Sublingual&quot;,&quot;5&quot;, 
&quot;6. Rectal&quot;,&quot;6&quot;, 
&quot;7. Topical&quot;,&quot;7&quot;, 
&quot;9. Not Known&quot;,&quot;9&quot;,
&quot;&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG2RTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG3AGE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, 

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;, 

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK( X27a_Substance_3__r.DrugCode__c ) ) , 

&quot;0&quot;,

TEXT(X27d_Age_of_1st_use__c) ) )</formula>
        <label>DRUG3AGE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG3CODEID__c</fullName>
        <label>DRUG3CODEID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG3CODEX__c</fullName>
        <label>DRUG3CODEX</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG3CODE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

 IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK( X27a_Substance_3__r.DrugCode__c ) ) ,

&quot;000&quot;,

X27a_Substance_3__r.DrugCode__c ) )</formula>
        <label>DRUG3CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG3FREQ__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK(  X27a_Substance_3__r.DrugCode__c  ) ) ,

&quot;0&quot;, 

Case(X27c_Frequency_of_use_in_last_mth__c, 
&quot;1. Once a week or less&quot;,&quot;1&quot;, 
&quot;2. 2-6 days per week&quot;,&quot;2&quot;, 
&quot;3. Daily&quot;,&quot;3&quot;, 
&quot;4. No use in past month&quot;,&quot;4&quot;, 
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG3FREQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG3RTE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK(  X27a_Substance_3__r.DrugCode__c ) ) ,

&quot;0&quot;, 

Case(X27b_Route_of_Admin_Sub3__c, 
&quot;1. Inject&quot;,&quot;1&quot;, 
&quot;2. Smoke&quot;,&quot;2&quot;, 
&quot;3. Eat/drink&quot;,&quot;3&quot;, 
&quot;4. Sniff/snort/ inhale&quot;,&quot;4&quot;, 
&quot;5. Sublingual&quot;,&quot;5&quot;, 
&quot;6. Rectal&quot;,&quot;6&quot;, 
&quot;7. Topical&quot;,&quot;7&quot;, 
&quot;9. Not Known&quot;, &quot;9&quot;,
&quot;&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG3RTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG4AGE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;, 

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;, 

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;, 

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;, 

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;, 

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;, 

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK( X28a_Substance_4__r.DrugCode__c ) ) , 

&quot;0&quot;,

TEXT(X28d_Age_of_1st_use__c) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG4AGE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG4CODEID__c</fullName>
        <label>DRUG4CODEID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG4CODEX__c</fullName>
        <label>DRUG4CODEX</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG4CODE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK(  X28a_Substance_4__r.DrugCode__c  ) ) ,

&quot;000&quot;, 

X28a_Substance_4__r.DrugCode__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG4CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG4FREQ__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK(  X28a_Substance_4__r.DrugCode__c  ) ) ,

&quot;0&quot;, 

Case(X28c_Frequency_of_use_in_last_mth__c, 
&quot;1. Once a week or less&quot;,&quot;1&quot;, 
&quot;2. 2-6 days per week&quot;,&quot;2&quot;, 
&quot;3. Daily&quot;,&quot;3&quot;, 
&quot;4. No use in past month&quot;,&quot;4&quot;, 
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG4FREQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG4RTE__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;), 

&quot;&quot;,

IF( AND( NOT( ISBLANK( X25a_Main_substance__r.DrugCode__c ) ) , ISBLANK(  X28a_Substance_4__r.DrugCode__c  ) ) ,

&quot;0&quot;, 

Case(X28b_Route_of_Admin_Sub4__c, 
&quot;1. Inject&quot;,&quot;1&quot;, 
&quot;2. Smoke&quot;,&quot;2&quot;, 
&quot;3. Eat/drink&quot;,&quot;3&quot;, 
&quot;4. Sniff/snort/ inhale&quot;,&quot;4&quot;, 
&quot;5. Sublingual&quot;,&quot;5&quot;, 
&quot;6. Rectal&quot;,&quot;6&quot;, 
&quot;7. Topical&quot;,&quot;7&quot;, 
&quot;9. Not Known&quot;, &quot;9&quot;,
&quot;&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG4RTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRUG__c</fullName>
        <formula>IF( OR( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c = &quot;994&quot;,

TEXT(X17a_Assessment_outcome__c) = &quot;2. Unsuitable for treatment&quot;,

TEXT( X17b_Assessment_criterion_fulfilled__c ) = &quot;2. No&quot;,

TEXT( X18a_Clients_treatment_status__c ) = &quot;3. Transferred to another site&quot;,

TEXT( X18a_Clients_treatment_status__c ) =&quot;4. Psychiatric assessment only&quot;,

TEXT( X19_Accepted_place_at_this_centre__c ) = &quot;2. No&quot;),


&quot;&quot;, 

Case(X22_Ever_previously_treated_re_drug__c, 
&quot;1. Never treated&quot;,&quot;1&quot;, 
&quot;2. Previously treated&quot;,&quot;2&quot;, 
&quot;8. Not applicable&quot;,&quot;8&quot;, 
&quot;9. Not known&quot;,&quot;9&quot;,
&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRUG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_latest_intervention_commenced__c</fullName>
        <inlineHelpText>This will be populated by a trigger and will be the max of the date commenced fields</inlineHelpText>
        <label>Date latest intervention commenced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drug_Type__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.drugtype__c = &quot;2&quot;, &quot;2. ILICIT DRUG&quot;, 
IF( X14_Main_Reason_for_Referral_Drug__r.drugtype__c = &quot;3&quot;, &quot;3. LICIT DRUG&quot;,
IF( X14_Main_Reason_for_Referral_Drug__r.drugtype__c = &quot;1&quot;, &quot;1. ALCOHOL&quot;, &quot;4. Other problem&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Valid_Table_2012__c</fullName>
        <formula>IF( X14_Main_Reason_for_Referral_Drug__r.DrugCode__c &lt;&gt; X25a_Main_substance__r.DrugCode__c, 
&quot;Reason for referral (Q14) &amp; primary drug (Q25a) should match&quot;, 
IF(AND( NOT( ISBLANK( X24b_Specify_first_drug_used__c )), X24b_Specify_first_drug_used__r.Tableyear2012__c = FALSE), 
&quot;Invalid Drug Q24b&quot;, 
IF( AND( NOT( ISBLANK( X25a_Main_substance__c )), X25a_Main_substance__r.Tableyear2012__c = FALSE), 
&quot;Invalid Drug Q25a&quot;, 
IF( AND( NOT( ISBLANK( X26a_Substance_2__c )), X26a_Substance_2__r.Tableyear2012__c = FALSE), 
&quot;Invalid Drug Q26a&quot;, 
IF( AND( NOT( ISBLANK( X27a_Substance_3__c )), X27a_Substance_3__r.Tableyear2012__c = FALSE), 
&quot;Invalid Drug Q27a&quot;, 
IF( AND( NOT( ISBLANK( X28a_Substance_4__c )), X28a_Substance_4__r.Tableyear2012__c= FALSE), 
&quot;Invalid Drug Q28a&quot;, 
&quot;HRB OK&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Valid Table 2012</label>
        <type>Text</type>
    </fields>
</CustomObject>